# EvolutionaryMusicProjectv2

./: .gitgnore  CMakeLists.txt  README.md
include/: GenAlgo.h  GenerationPopulation.h  GenerationQueue.h  MelodyNode.h  commonfuncs.h  melody.h  melody2midi.h  melody2sonic.h  note.h  otherfuncs.h  score.h
include/parameters/: constants.h  options.h
outputSonic/: Best_Melody.txt  Best_Melody_best_overall.txt  Best_Melody_dad.txt  Best_Melody_grandma1.txt  Best_Melody_grandma2.txt  Best_Melody_grandpa1.txt  Best_Melody_grandpa2.txt  Best_Melody_mom.txt
src/: GenAlgo.cpp  GenerationPopulation.cpp  GenerationQueue.cpp  MelodyNode.cpp  commonfuncs.cpp  main.cpp  melody.cpp  melody2midi.cpp  melody2sonic.cpp  note.cpp  otherfuncs.cpp  score.cpp
